Align items start on homepage to prevent white space at bottom of featured section

--- a/wp-content/themes/reconasia/assets/_scss/pages/home.scss
+++ b/wp-content/themes/reconasia/assets/_scss/pages/home.scss
@@ -15,6 +15,7 @@
     @include breakpoint('large') {
       display: grid;
       grid-template-columns: minmax(50%, auto) rem(330);
+      align-items: flex-start;
       margin-top: rem(24);
     }
 
@@ -230,9 +231,9 @@
     }
 
     .post-block {
-      padding-bottom: rem(24);
       display: flex;
       flex-direction: column;
+      padding-bottom: rem(24);
 
       &:not(:last-child) {
         border-bottom: 1px solid $color-black-130;
